feat: Refine portfolio branding and UX
Updates the portfolio's branding to use a consistent name ("Pedro Franco") across the site. Enhances the user experience by adjusting styling for better readability and impact.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PedroPauloFranco - Desenvolvedor Full Stack</title>
+    <title>Pedro Franco - Desenvolvedor Full Stack</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
 
     <header>
         <nav class="container">
-            <a href="#" class="logo">PedroPauloFranco</a>
+            <a href="#" class="logo">Pedro Franco</a>
             <ul class="nav-links">
                 <li><a href="#home">Início</a></li>
                 <li><a href="#about">Sobre</a></li>
@@ -48,16 +48,16 @@
             <div class="container hero-container">
                 <div class="hero-content">
                     <p class="subtitle">Olá, eu sou</p>
-                    <h1 class="title">PedroPauloFranco</h1>
-                    <h2 class="job-title">Desenvolvedor Full Stack</h2>
+                    <h1 class="title">Pedro Franco</h1>
+                    <h2 class="job-title">Desenvolvedor Full Stack & Criador de Soluções Digitais</h2>
                     <div class="hero-buttons">
-                        <a href="#" class="button primary">Baixar CV</a>
+                        <a href="CV.pdf" class="button primary" download>Baixar CV</a>
                         <a href="#contact" class="button">Vamos Conversar</a>
                     </div>
                 </div>
                 <div class="hero-socials">
-                     <a href="#" aria-label="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
-                     <a href="#" aria-label="GitHub"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
+                     <a href="#linkedin" aria-label="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
+                     <a href="#github" aria-label="GitHub"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
                 </div>
             </div>
         </section>
@@ -67,11 +67,11 @@
                 <h2 class="section-title">Sobre Mim</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://via.placeholder.com/350" alt="Retrato de PedroPauloFranco">
+                        <img src="https://placehold.co/600x600/1E1E1E/FFFFFF" alt="Retrato de Pedro Franco">
                     </div>
                     <div class="about-text">
                         <h3>Desenvolvedor Apaixonado Criando Experiências Web Modernas</h3>
-                        <p>Sou um desenvolvedor full stack apaixonado por construir aplicações web bonitas, responsivas e fáceis de usar. Com uma base sólida em tecnologias de front-end e back-end, especializo-me em dar vida a ideias. Estou sempre ansioso para aprender novas tecnologias e aprimorar minhas habilidades.</p>
+                        <p>Sou um desenvolvedor full stack com foco em criar aplicações web performáticas e intuitivas. Tenho experiência com o ecossistema JavaScript, incluindo React, Node.js, e TypeScript, e busco sempre transformar ideias complexas em soluções elegantes e funcionais. Estou sempre aprendendo e me adaptando às novas tecnologias do mercado.</p>
                         <a href="#contact" class="button primary">Vamos Conectar</a>
                     </div>
                 </div>
@@ -84,35 +84,41 @@
                 <div class="projects-grid">
                     <article class="project-card">
                         <div class="project-image">
-                            <img src="https://via.placeholder.com/400x250" alt="Projeto Um">
+                            <img src="https://placehold.co/600x440/1E1E1E/00A8E8?text=E-commerce+Platform" alt="Projeto E-commerce Platform">
                         </div>
-                        <h3>Projeto Um</h3>
-                        <p>Uma breve descrição do projeto, seu propósito e as tecnologias utilizadas.</p>
-                        <div class="project-links">
-                            <a href="#" class="button">GitHub</a>
-                            <a href="#" class="button primary">Demo ao Vivo</a>
-                        </div>
-                    </article>
-                    <article class="project-card">
-                        <div class="project-image">
-                           <img src="https://via.placeholder.com/400x250" alt="Projeto Dois">
-                        </div>
-                        <h3>Projeto Dois</h3>
-                        <p>Uma breve descrição do projeto, seu propósito e as tecnologias utilizadas.</p>
-                        <div class="project-links">
-                            <a href="#" class="button">GitHub</a>
-                            <a href="#" class="button primary">Demo ao Vivo</a>
+                        <div class="project-content">
+                            <h3>Plataforma de E-commerce</h3>
+                            <p>Plataforma de e-commerce completa com carrinho de compras, checkout e painel de administração, construída com React e Node.js.</p>
+                            <div class="project-links">
+                                <a href="#" class="button">GitHub</a>
+                                <a href="#" class="button primary">Demo ao Vivo</a>
+                            </div>
                         </div>
                     </article>
                     <article class="project-card">
                         <div class="project-image">
-                           <img src="https://via.placeholder.com/400x250" alt="Projeto Três">
+                           <img src="https://placehold.co/600x440/1E1E1E/00A8E8?text=Task+Manager+App" alt="Projeto Task Manager App">
                         </div>
-                        <h3>Projeto Três</h3>
-                        <p>Uma breve descrição do projeto, seu propósito e as tecnologias utilizadas.</p>
-                        <div class="project-links">
-                            <a href="#" class="button">GitHub</a>
-                            <a href="#" class="button primary">Demo ao Vivo</a>
+                        <div class="project-content">
+                            <h3>App de Gestão de Tarefas</h3>
+                            <p>Uma aplicação para gestão de tarefas com drag-and-drop, autenticação de usuários e notificações em tempo real usando Firebase.</p>
+                            <div class="project-links">
+                                <a href="#" class="button">GitHub</a>
+                                <a href="#" class="button primary">Demo ao Vivo</a>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="project-card">
+                        <div class="project-image">
+                           <img src="https://placehold.co/600x440/1E1E1E/00A8E8?text=Portfolio+Website" alt="Projeto Portfolio Website">
+                        </div>
+                        <div class="project-content">
+                            <h3>Website de Portfólio</h3>
+                            <p>O próprio site que você está vendo. Criado para ser um cartão de visitas digital, com foco em design limpo e responsividade.</p>
+                            <div class="project-links">
+                                <a href="#" class="button">GitHub</a>
+                                <a href="#" class="button primary">Demo ao Vivo</a>
+                            </div>
                         </div>
                     </article>
                 </div>
@@ -122,25 +128,25 @@
         <section id="contact">
             <div class="container contact-container">
                 <h2 class="section-title">Entre em Contato</h2>
-                <p>Minha caixa de entrada está sempre aberta. Se você tiver uma pergunta ou apenas quiser dizer olá, farei o meu melhor para responder!</p>
-                <a href="mailto:pedropaulofranco@example.com" class="button primary">Diga Olá</a>
+                <p>Estou sempre aberto a novas oportunidades e colaborações. Se você tem um projeto em mente, uma pergunta ou apenas quer dizer oi, minha caixa de entrada está aberta!</p>
+                <a href="mailto:pedro.franco@example.com" class="button primary">Diga Olá</a>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container footer-container">
-            <a href="#" class="logo">PedroPauloFranco</a>
+            <a href="#" class="logo">Pedro Franco</a>
             <ul class="footer-links">
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#projects">Projetos</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
              <div class="footer-socials">
-                <a href="#" aria-label="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
-                <a href="#" aria-label="GitHub"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
+                <a href="#linkedin" aria-label="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
+                <a href="#github" aria-label="GitHub"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
             </div>
-            <p class="copyright">&copy; 2024 PedroPauloFranco. Todos os direitos reservados.</p>
+            <p class="copyright">&copy; 2024 Pedro Franco. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
